Add: primer borrador de maquetacion html

--- a/adornos.html
+++ b/adornos.html
@@ -40,51 +40,58 @@
 
     <hr>
 
-    <div class="container" id="principalContent">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-4">
-                <a href="adornos.html">
+            <div class="col-lg-3">
                 <img src="img/pastel-de-fresa-chocolate-amargo.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel besos de fresa <br>
-                $270.00
-                </a>
             </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel-aleman.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel aleman <br>
-                $270.00
+            <div class="col">
+                <br><br>
+                Delicioso pastel con intenso sabor a chocolate, ligeramente húmedo combinado con fresas. ¡Pruébalo será tu favorito!                 
             </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel-mil-hojas.png" alt="pastel besos de fresa" width="205"><br>
-                Pastel mil hojas <br>
-                $290.00
-            </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel-capuchino.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel capuchino <br>
-                $420.00
+        </div>
+
+        <div class="row">
+            <div class="col">
+                Agrega adornos a tu pastel
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel-tres-leches.png" alt="pastel besos de fresa" width="205"><br>
-                Pastel tres leches <br>
-                $380.00
+            <div class="col-lg-2">
+                <img src="img/adorno1.png" alt="adorno1" width="111">
             </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel de queso.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel de queso <br>
-                $270.00
+            <div class="col-lg-2">
+                $50.00
             </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/Pastel de Yogurt con Fresas.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel de yogurth con fresa <br>
-                $300.00
+            <div class="col-lg-1">
+                X
             </div>
-            <div class="col-lg-3 col-md-4">
-                <img src="img/pastel de zanahoria.jpg" alt="pastel besos de fresa" width="205"><br>
-                Pastel de zanahoria <br>
-                $395.00
+            <div class="col-lg-3">
+                Cantidad <input type="number" required> 
+            </div>
+            <div class="col-lg-2">
+                $$$
+            </div>
+        </div>
+
+        <br>
+        <div class="row">
+            Ingresa los datos para tu orden
+
+            <form>
+
+                
+                <button type="button" class="btn btn-success">Enviar</button>
+                <button type="button" class="btn btn-danger">Limpiar</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+            </div>
+            <div class="col">
             </div>
         </div>
     </div>
